# Hamming-Code-Assignment

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  codec.cpp  codec.h
tests/: CMakeLists.txt  test_hamming_codec.cpp
